[gd_scene load_steps=10 format=3 uid="uid://bx8gyquytdno3"]

[ext_resource type="Script" path="res://scripts/alchemist_ant.gd" id="1_4aih7"]
[ext_resource type="Texture2D" uid="uid://cqhw2wvwm4s6u" path="res://art/characters/npcs/wizardant.png" id="3_7j7h1"]
[ext_resource type="FontFile" uid="uid://dfcur1am0jjb4" path="res://components/mitochondria.ttf" id="3_mdnq1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f6m53"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fesif"]
atlas = ExtResource("3_7j7h1")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpdi6"]
atlas = ExtResource("3_7j7h1")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fspw4"]
atlas = ExtResource("3_7j7h1")
region = Rect2(640, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_p56pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fesif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpdi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fspw4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_yeof2"]
size = Vector3(2.06418, 0.861085, 2)

[node name="AlchemistAnt" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_4aih7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("CapsuleShape3D_f6m53")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
pixel_size = 0.002
billboard = 1
sprite_frames = SubResource("SpriteFrames_p56pv")

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("BoxShape3D_yeof2")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
billboard = 1
text = "Press T(alk)"
font = ExtResource("3_mdnq1")
font_size = 17

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
